Adding more entities.

--- a/_includes/scene.html
+++ b/_includes/scene.html
@@ -23,12 +23,27 @@
 <a-box position="1.0449 1.5 0.1885" width="0.3299" height="3" depth="1.0061" color={{wall_color}} shadow></a-box>
 <a-box position="-1.1365 1.5 0.1885" width="0.3299" height="3" depth="1.0061" color={{wall_color}} shadow></a-box>
 
+<a-box position="-1.2092 1.5 -0.8987" width="0.1846" height="3" depth="1.1682" material="side: double; color: #FFFFFF; transparent: true; opacity: 0.2" shadow></a-box>
+<a-box position="-1.6332 1.5 -1.5507" width="0.9934" height="3" depth="0.1357" color={{wall_color}} shadow></a-box>
+<a-box position="-2.4592 2.4 -1.5507" width="0.6585" height="1.2" depth="0.1357" color={{wall_color}} shadow></a-box>
+<a-box position="-3.46 1.5 -1.5507" width="1.3431" height="3" depth="0.1357" color={{wall_color}} shadow></a-box>
+
+
+
+
 <!-- Plane Walls -->
-<a-plane position="2.4685 1.5 0.6915" rotation="0 180 0" width="3.117" height="3" color={{wall_color}}></a-plane>
+<a-plane position="2.4685 1.5 0.6791" rotation="0 180 0" width="3.117" height="3" color={{wall_color}} shadow></a-plane>
+<a-plane position="-2.6242 1.5 0.6791" rotation="0 180 0" width="3.0147" height="3" color={{wall_color}} shadow></a-plane>
+<a-plane position="-4.1315 1.5 -0.4371" rotation="0 90 0" width="2.0915" height="3" color="#222222" shadow></a-plane>
+<a-plane position="-4.1315 1.5 -2.7116" rotation="0 90 0" width="2.4575" height="3" color={{wall_color}} shadow></a-plane>
+
+
+
 
 <!-- Tabletops -->
 <a-box position="2.6184 1.1 0.3813" width="2.8172" height="0.2" depth="0.6205" color={{wall_color}} shadow></a-box>
 <a-box position="3.6462 1.1 -2.1937" width="0.7615" height="0.2" depth="4.5294" color={{wall_color}} shadow></a-box>
+
 
 
 
