--- a/_includes/scene.html
+++ b/_includes/scene.html
@@ -9,9 +9,9 @@
 <a-plane position="-4.5 0 -5.9886" rotation="-90 0 0" width="2.415" height="4.0964" color={{ground_color}} shadow></a-plane>
 
 <!-- Ceiling -->
-<a-plane position="-0.0523 3 -4.6947" rotation="-90 0 0" width="8.1585" height="10.7724" color={{wall_color}} shadow></a-plane>
-<a-plane position="2.6562 3 -14.6517" rotation="-90 0 0" width="8.9298" height="11.7693" color={{wall_color}} shadow></a-plane>
-<a-plane position="-5.8771 3 -17.7115" rotation="-90 0 0" width="8.1367" height="5.6497" color={{wall_color}} shadow></a-plane>
+<a-plane position="-0.0523 3 -4.6947" rotation="-90 0 0" width="8.1585" height="10.7724" material="side: back; color={{wall_color}}" shadow></a-plane>
+<a-plane position="2.6562 3 -14.6517" rotation="-90 0 0" width="8.9298" height="11.7693" material="side: back; color={{wall_color}}" shadow></a-plane>
+<a-plane position="-5.8771 3 -17.7115" rotation="-90 0 0" width="8.1367" height="5.6497" material="side: back; color={{wall_color}}" shadow></a-plane>
 
 <!-- Railings -->
 <a-box position="3.9342 .7 -3.4786" width="0.1855" height="1.4" depth="8.3402" color={{wood_color}} shadow></a-box>
@@ -28,13 +28,10 @@
 <a-box position="-2.4592 2.4 -1.5507" width="0.6585" height="1.2" depth="0.1357" color={{wall_color}} shadow></a-box>
 <a-box position="-3.46 1.5 -1.5507" width="1.3431" height="3" depth="0.1357" color={{wall_color}} shadow></a-box>
 
-
-
-
 <!-- Plane Walls -->
 <a-plane position="2.4685 1.5 0.6791" rotation="0 180 0" width="3.117" height="3" color={{wall_color}} shadow></a-plane>
 <a-plane position="-2.6242 1.5 0.6791" rotation="0 180 0" width="3.0147" height="3" color={{wall_color}} shadow></a-plane>
-<a-plane position="-4.1315 1.5 -0.4371" rotation="0 90 0" width="2.0915" height="3" color="#222222" shadow></a-plane>
+<a-plane position="-4.1315 1.5 -0.4019" rotation="0 90 0" width="2.162" height="3" color="#222222" shadow></a-plane>
 <a-plane position="-4.1315 1.5 -2.7116" rotation="0 90 0" width="2.4575" height="3" color={{wall_color}} shadow></a-plane>
 
 
