Updating nav mesh

--- a/_includes/scene.html
+++ b/_includes/scene.html
@@ -9,9 +9,9 @@
 <a-plane position="-4.5 0 -5.9886" rotation="-90 0 0" width="2.415" height="4.0964" color={{ground_color}} shadow></a-plane>
 
 <!-- Ceiling -->
-<a-plane position="-0.0523 3 -4.6947" rotation="-90 0 0" width="8.1585" height="10.7724" material="side: back; color={{wall_color}}" shadow></a-plane>
-<a-plane position="2.6562 3 -14.6517" rotation="-90 0 0" width="8.9298" height="11.7693" material="side: back; color={{wall_color}}" shadow></a-plane>
-<a-plane position="-5.8771 3 -17.7115" rotation="-90 0 0" width="8.1367" height="5.6497" material="side: back; color={{wall_color}}" shadow></a-plane>
+<a-plane position="-0.0523 3 -4.6947" rotation="-90 0 0" width="8.1585" height="10.7724" material="side: back; color: #eeeeee" ></a-plane>
+<a-plane position="2.6562 3 -14.6517" rotation="-90 0 0" width="8.9298" height="11.7693" material="side: back; color: #eeeeee" ></a-plane>
+<a-plane position="-5.8771 3 -17.7115" rotation="-90 0 0" width="8.1367" height="5.6497" material="side: back; color: #eeeeee" ></a-plane>
 
 <!-- Railings -->
 <a-box position="3.9342 .7 -3.4786" width="0.1855" height="1.4" depth="8.3402" color={{wood_color}} shadow></a-box>
