Finishing plane walls

--- a/_includes/scene.html
+++ b/_includes/scene.html
@@ -7,11 +7,14 @@
 <a-plane position="2.6562 0 -14.6517" rotation="-90 0 0" width="8.9298" height="11.7693" color={{ground_color}} shadow></a-plane>
 <a-plane position="-5.8771 0 -17.7115" rotation="-90 0 0" width="8.1367" height="5.6497" color={{ground_color}} shadow></a-plane>
 <a-plane position="-4.5 0 -5.9886" rotation="-90 0 0" width="2.415" height="4.0964" color={{ground_color}} shadow></a-plane>
+<a-plane position="8.1279 0 -16.326" rotation="-90 0 0" width="2.0137" height="4.2101" color={{ground_color}} shadow></a-plane>
 
 <!-- Ceiling -->
 <a-plane position="-0.0523 3 -4.6947" rotation="-90 0 0" width="8.1585" height="10.7724" material="side: back; color: #eeeeee" ></a-plane>
 <a-plane position="2.6562 3 -14.6517" rotation="-90 0 0" width="8.9298" height="11.7693" material="side: back; color: #eeeeee" ></a-plane>
 <a-plane position="-5.8771 3 -17.7115" rotation="-90 0 0" width="8.1367" height="5.6497" material="side: back; color: #eeeeee" ></a-plane>
+<a-plane position="-4.5 3 -5.9886" rotation="-90 0 0" width="2.415" height="4.0964" material="side: back; color: #eeeeee"></a-plane>
+<a-plane position="8.1279 3 -16.326" rotation="-90 0 0" width="2.0137" height="4.2101" material="side: back; color: #eeeeee"></a-plane>
 
 <!-- Railings -->
 <a-box position="3.9342 .7 -3.4786" width="0.1855" height="1.4" depth="8.3402" color={{wood_color}} shadow></a-box>
@@ -23,10 +26,17 @@
 <a-box position="1.0449 1.5 0.1885" width="0.3299" height="3" depth="1.0061" color={{wall_color}} shadow></a-box>
 <a-box position="-1.1365 1.5 0.1885" width="0.3299" height="3" depth="1.0061" color={{wall_color}} shadow></a-box>
 
+<!-- 152b -->
 <a-box position="-1.2092 1.5 -0.8987" width="0.1846" height="3" depth="1.1682" material="side: double; color: #FFFFFF; transparent: true; opacity: 0.2" shadow></a-box>
 <a-box position="-1.6332 1.5 -1.5507" width="0.9934" height="3" depth="0.1357" color={{wall_color}} shadow></a-box>
 <a-box position="-2.4592 2.4 -1.5507" width="0.6585" height="1.2" depth="0.1357" color={{wall_color}} shadow></a-box>
 <a-box position="-3.46 1.5 -1.5507" width="1.3431" height="3" depth="0.1357" color={{wall_color}} shadow></a-box>
+
+<!-- 152a -->
+<a-box position="-3.6989 1.5 -3.8725" width="0.8652" height="3" depth="0.1357" color={{wall_color}} shadow></a-box>
+<a-box position="-3.3342 2.4 -4.3375" width="0.1357" height="1.2" depth="1" color={{wall_color}} shadow></a-box>
+<a-box position="-3.3342 1.5 -6.3856" width="0.1357" height="3" depth="3.3023" color={{wall_color}} shadow></a-box>
+<a-box position="-3.4637 1.5 -8.1046" width="0.3946" height="3" depth="0.1357" color={{wall_color}} shadow></a-box>
 
 <!-- Plane Walls -->
 <a-plane position="2.4685 1.5 0.6791" rotation="0 180 0" width="3.117" height="3" color={{wall_color}} shadow></a-plane>
@@ -34,15 +44,26 @@
 <a-plane position="-4.1315 1.5 -0.4019" rotation="0 90 0" width="2.162" height="3" color="#222222" shadow></a-plane>
 <a-plane position="-4.1315 1.5 -2.7116" rotation="0 90 0" width="2.4575" height="3" color={{wall_color}} shadow></a-plane>
 
+<a-plane position="-4.9199 1.5 -3.9404" rotation="0 180 0" width="1.5768" height="3" color={{wall_color}} shadow></a-plane>
+<a-plane position="-5.7083 1.5 -5.9886" rotation="0 90 0" width="4.0964" height="3" color={{wall_color}} shadow></a-plane>
+<a-plane position="-4.6846 1.5 -8.0368" rotation="0 0 0" width="2.0474" height="3" color={{wall_color}} shadow></a-plane>
+
+<a-plane position="-3.661 1.5 -9.0588" rotation="0 90 0" width="2.0441" height="3" color={{wall_color}} shadow></a-plane>
+<a-plane position="-2.7349 1.5 -10.0809" rotation="0 0 0" width="1.8523" height="3" color={{wall_color}} shadow></a-plane>
+<a-plane position="-1.8087 1.5 -12.4838" rotation="0 90 0" width="4.8058" height="3" color={{wall_color}} shadow></a-plane>
+
+<!-- Quiet reading room -->
+<a-plane position="-5.8771 1.5 -14.8952" rotation="0 180 0" width="8.1367" height="3" color={{wall_color}} shadow></a-plane>
+<a-plane position="-9.9454 1.5 -17.7157" rotation="0 90 0" width="5.6411" height="3" color={{wall_color}} shadow></a-plane>
+<a-plane position="-0.4053 1.5 -20.5363" rotation="0 0 0" width="19.0802" height="3" color={{wall_color}} shadow></a-plane>
+
+
 
 
 
 <!-- Tabletops -->
 <a-box position="2.6184 1.1 0.3813" width="2.8172" height="0.2" depth="0.6205" color={{wall_color}} shadow></a-box>
 <a-box position="3.6462 1.1 -2.1937" width="0.7615" height="0.2" depth="4.5294" color={{wall_color}} shadow></a-box>
-
-
-
 
 <!-- Columns -->
 <a-cylinder color={{wall_color}} height="3" radius="0.215" position="2.2868 1.5 -5.3979"></a-cylinder>
