Update nav mesh.

--- a/_includes/scene.html
+++ b/_includes/scene.html
@@ -7,20 +7,21 @@
 <a-plane position="2.6562 0 -14.6517" rotation="-90 0 0" width="8.9298" height="11.7693" color={{ground_color}} shadow></a-plane>
 <a-plane position="-5.8771 0 -17.7115" rotation="-90 0 0" width="8.1367" height="5.6497" color={{ground_color}} shadow></a-plane>
 <a-plane position="-4.5 0 -5.9886" rotation="-90 0 0" width="2.415" height="4.0964" color={{ground_color}} shadow></a-plane>
-<a-plane position="8.1279 0 -16.326" rotation="-90 0 0" width="2.0137" height="4.2101" color={{ground_color}} shadow></a-plane>
+<a-plane position="8.1279 0 -18.431" rotation="-90 0 0" width="2.0137" height="4.2101" color={{ground_color}} shadow></a-plane>
 
 <!-- Ceiling -->
 <a-plane position="-0.0523 3 -4.6947" rotation="-90 0 0" width="8.1585" height="10.7724" material="side: back; color: #eeeeee" ></a-plane>
 <a-plane position="2.6562 3 -14.6517" rotation="-90 0 0" width="8.9298" height="11.7693" material="side: back; color: #eeeeee" ></a-plane>
 <a-plane position="-5.8771 3 -17.7115" rotation="-90 0 0" width="8.1367" height="5.6497" material="side: back; color: #eeeeee" ></a-plane>
 <a-plane position="-4.5 3 -5.9886" rotation="-90 0 0" width="2.415" height="4.0964" material="side: back; color: #eeeeee"></a-plane>
-<a-plane position="8.1279 3 -16.326" rotation="-90 0 0" width="2.0137" height="4.2101" material="side: back; color: #eeeeee"></a-plane>
+<a-plane position="8.1279 3 -18.431" rotation="-90 0 0" width="2.0137" height="4.2101" material="side: back; color: #eeeeee"></a-plane>
 
 <!-- Railings -->
 <a-box position="3.9342 .7 -3.4786" width="0.1855" height="1.4" depth="8.3402" color={{wood_color}} shadow></a-box>
 <a-box position="3.1374 .6 -7.556" width="1.7792" height="1.2" depth="0.1855" color={{wood_color}} shadow></a-box>
 <a-box position="4.6844 .6 -8.8648" width="4.8733" height="1.2" depth="0.1855" color={{wood_color}} shadow></a-box>
 <a-box position="7.0283 .6 -12.7431" width="0.1855" height="1.2" depth="7.5711" color={{wood_color}} shadow></a-box>
+<a-box position="8.1279 .6 -16.4359" width="2.0137" height="1.2" depth="0.1855" color={{wood_color}} shadow></a-box>
 
 <!-- Box Walls -->
 <a-box position="1.0449 1.5 0.1885" width="0.3299" height="3" depth="1.0061" color={{wall_color}} shadow></a-box>
@@ -37,6 +38,34 @@
 <a-box position="-3.3342 2.4 -4.3375" width="0.1357" height="1.2" depth="1" color={{wall_color}} shadow></a-box>
 <a-box position="-3.3342 1.5 -6.3856" width="0.1357" height="3" depth="3.3023" color={{wall_color}} shadow></a-box>
 <a-box position="-3.4637 1.5 -8.1046" width="0.3946" height="3" depth="0.1357" color={{wall_color}} shadow></a-box>
+
+<!-- Back Offices -->
+<a-box position="-3.4674 1.5 -18.341" width="0.3873" height="3" depth="4.3894" color={{wall_color}} shadow></a-box>
+
+<!-- 157 -->
+<a-box position="-2.6544 1.5 -17.6654" width="1.2386" height="3" depth="0.1234" color={{wall_color}} shadow></a-box>
+<a-box position="-1.6806 2.4 -17.6654" width="0.7092" height="1.2" depth="0.1234" color={{wall_color}} shadow></a-box>
+<a-box position="-1.2386 1.5 -19.0697" width="0.1748" height="3" depth="2.9301" color={{wall_color}} shadow></a-box>
+
+<!-- 158 -->
+<a-box position="-0.5316 1.5 -17.6654" width="1.2386" height="3" depth="0.1234" color={{wall_color}} shadow></a-box>
+<a-box position="0.4423 2.4 -17.6654" width="0.7092" height="1.2" depth="0.1234" color={{wall_color}} shadow></a-box>
+<a-box position="0.8843 1.5 -19.0697" width="0.1748" height="3" depth="2.9301" color={{wall_color}} shadow></a-box>
+
+<!-- 159 -->
+<a-box position="1.5913 1.5 -17.6654" width="1.2386" height="3" depth="0.1234" color={{wall_color}} shadow></a-box>
+<a-box position="2.5651 2.4 -17.6654" width="0.7092" height="1.2" depth="0.1234" color={{wall_color}} shadow></a-box>
+<a-box position="3.0071 1.5 -19.0697" width="0.1748" height="3" depth="2.9301" color={{wall_color}} shadow></a-box>
+
+<!-- 160 -->
+<a-box position="3.7141 1.5 -17.6654" width="1.2386" height="3" depth="0.1234" color={{wall_color}} shadow></a-box>
+<a-box position="4.6879 2.4 -17.6654" width="0.7092" height="1.2" depth="0.1234" color={{wall_color}} shadow></a-box>
+<a-box position="5.1299 1.5 -19.0697" width="0.1748" height="3" depth="2.9301" color={{wall_color}} shadow></a-box>
+
+<!-- 161 -->
+<a-box position="6.6603 1.5 -17.6654" width="2.8859" height="3" depth="0.1234" color={{wall_color}} shadow></a-box>
+<a-box position="8.4578 2.4 -17.6654" width="0.7092" height="1.2" depth="0.1234" color={{wall_color}} shadow></a-box>
+<a-box position="8.9736 1.5 -19.0697" width="0.3224" height="3" depth="2.9301" color={{wall_color}} shadow></a-box>
 
 <!-- Plane Walls -->
 <a-plane position="2.4685 1.5 0.6791" rotation="0 180 0" width="3.117" height="3" color={{wall_color}} shadow></a-plane>
@@ -55,11 +84,9 @@
 <!-- Quiet reading room -->
 <a-plane position="-5.8771 1.5 -14.8952" rotation="0 180 0" width="8.1367" height="3" color={{wall_color}} shadow></a-plane>
 <a-plane position="-9.9454 1.5 -17.7157" rotation="0 90 0" width="5.6411" height="3" color={{wall_color}} shadow></a-plane>
-<a-plane position="-0.4053 1.5 -20.5363" rotation="0 0 0" width="19.0802" height="3" color={{wall_color}} shadow></a-plane>
+<a-plane position="-7.3596 1.5 -20.5363" rotation="0 0 0" width="5.1717" height="3" material="side: double; color: #FFFFFF; transparent: true; opacity: 0.2"></a-plane>
 
-
-
-
+<a-plane position="2.1805 1.5 -20.5363" rotation="0 0 0" width="13.9085" height="3" color={{wall_color}} shadow></a-plane>
 
 <!-- Tabletops -->
 <a-box position="2.6184 1.1 0.3813" width="2.8172" height="0.2" depth="0.6205" color={{wall_color}} shadow></a-box>
@@ -69,4 +96,8 @@
 <a-cylinder color={{wall_color}} height="3" radius="0.215" position="2.2868 1.5 -5.3979"></a-cylinder>
 <a-cylinder color={{wall_color}} height="3" radius="0.215" position="2.2868 1.5 -10.2933"></a-cylinder>
 <a-cylinder color={{wall_color}} height="3" radius="0.215" position="2.2868 1.5 -14.7361"></a-cylinder>
+
+<!-- Mortarboard -->
+<a-box position="-1.77 1.5 -12.5016" width="0.0775" height="3" depth="4.6884" color="#d6ceba" shadow></a-box>
+
 
