Updating size of pedestals.

--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -24,6 +24,7 @@
           <a-cursor nav-pointer hover
             raycaster="objects: .clickable; far: .3"
             position="0 0 -.5"
+            geometry=
                     ></a-cursor>
           <a-image id="click" width="0.034" height="0.046" position="-0.003 0.003 -.49" src="assets/cursor.png" visible="false"></a-image>
         </a-entity>
