--- a/_includes/project-pedestals.html
+++ b/_includes/project-pedestals.html
@@ -31,7 +31,7 @@
         <a-box
             id={{box_id}}
             class="clickable"
-            proxlink="href: {{project.hyperlink}}; dist: 10"
+            clicklink="href: {{project.hyperlink}}"
             proxtext="message: {{project.author}}\n{{project.title}}\n(click)" 
             height=".3"
             width=".3"
