--- a/_includes/project-pedestals.html
+++ b/_includes/project-pedestals.html
@@ -1,4 +1,5 @@
-{% for project in site.data.projects %}
+{% assign projects = site.data.projects | concat: site.projects %}
+{% for project in projects %}
     {%- if project.pos And project.pos != "" And project.pos != nil -%}
         <a-box 
             height="1.2"
@@ -28,10 +29,11 @@
             rotation="0 45 0"
             text="width: 1.5; font: exo2bold; zOffset: .3; anchor: center; align: center; color: black; value: {{project.author}}\n{{project.title}}\n(click)" 
         ></a-entity> 
+        {% assign hyperlink = project.url | relative_url | append: project.hyperlink %}
         <a-box
             id={{box_id}}
             class="clickable"
-            clicklink="href: {{project.hyperlink}}"
+            clicklink="href: {{hyperlink}}"
             proxtext="message: {{project.author}}\n{{project.title}}\n(click)" 
             height=".3"
             width=".3"
