Making nav mesh invisible

--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -40,7 +40,7 @@
           ></a-image>
         </a-entity>
       </a-entity>
-      <a-entity gltf-model={{'/assets/scene_navmesh.gltf' | relative_url}} nav-mesh visible="true"></a-entity>
+      <a-entity gltf-model={{'/assets/scene_navmesh.gltf' | relative_url}} nav-mesh visible="false"></a-entity>
       {% include project-pedestals.html %}
       {% include scene.html %}
     </a-scene>
