--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -20,6 +20,7 @@
       <a-sky src="#skyTexture"></a-sky>
        <a-entity id="rig"
                 movement-controls="constrainToNavMesh: true"
+                speed="0.5"
                 position="0 0 0">
         <a-entity id="camera"
                   camera
