--- a/_includes/project-pedestals.html
+++ b/_includes/project-pedestals.html
@@ -39,10 +39,22 @@
             height=".3"
             width=".3"
             depth=".3"
-            color="#EF2D5E"
+            color="#FFB8A0"
             position={{new_pos}}
             rotation="0 0 0"
             animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear"
+            animation__rotate="property: position; to: {{up_pos}}; loop: true; dir: alternate; easing: easeInOutQuad"
+            animation__color="property: color; to: #FFF3A0; loop: true; dir: alternate; easing: linear"
+            shadow
+        ></a-box>
+        <a-box
+            height=".45"
+            width=".45"
+            depth=".45"
+            material="side: double; color: #BBBBBB; transparent: true; opacity: 0.2"
+            position={{new_pos}}
+            rotation="45 0 45"
+            animation="property: rotation; to: 45 360 45; loop: true; dur: 5000; easing: linear"
             animation__2="property: position; to: {{up_pos}}; loop: true; dir: alternate; easing: easeInOutQuad"
             shadow
         ></a-box>
