Changing intro text

--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -20,7 +20,7 @@
       <a-sky src="#skyTexture"></a-sky>
        <a-entity id="rig"
                 movement-controls="constrainToNavMesh: true"
-                speed="0.5"
+                speed="0.3"
                 position="0 0 0">
         <a-entity id="camera"
                   camera
@@ -52,7 +52,7 @@
         --> CONTROLS: WASD to move, mouse to look <--
         </h2>
         <h2 class="Exhibit__controls">
-        **UNDER CONSTRUCTION**
+        **THE LIBRARY, NOW IN ONLINE FORM!**
         </h2>
         <button class="Exhibit__link" id="enter">LOADING</button>
       </div>
