--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,7 @@
         <link rel="stylesheet" href={{'/assets/css/main.css' | relative_url}} />
     </head>
     <body>
-        <h1>Coming soon! Check back May 1st...</h1>
-        <div class="Page__wrapper" style="display: none">
+        <div class="Page__wrapper">
             <div class="Header__wrapper">
                 <div class="Header__inner">
                     <a href={{'/' | relative_url}}>
