Fixing project links and adding zoom links.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,6 +33,9 @@ layout: default
                 {{project.description}}    
                 {% assign proj_href = project.url | relative_url | append: project.hyperlink %}
                 <a class="Project__link" href={{proj_href}} target="_blank">MORE</a>
+                {% if project.zoom %}
+                    <a class="Exhibit__link Exhibit__link--ready">Join Zoom Discussion (8-9pm EST)</a>
+                {% endif %}
             </div>
         </div>
     </div>
