--- a/assets/css/button.scss
+++ b/assets/css/button.scss
@@ -23,6 +23,7 @@
     border: 1px solid black;
     color: black;
     font-weight: bold;
+    margin: 15px 0;
     padding: 10px;
     text-align: center;
     cursor: default;
