Moving project to its own page.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="Page__content-inner">
+<div class="Page__content-inner" style="display: block">
     <div class="Page__header">
         <h2>{{page.title}}</h2>
         <h3>{{page.author}}</h3>    
