--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <h2>Coming soon! Check back May 1st...</h2>
-        <div class="Page__wrapper" style="display: none">
-            <div class="Header__wrapper">
+        <div class="Page__wrapper" >
+            <div class="Header__wrapper" style="display: none">
                 <div class="Header__inner">
                     <a href={{'/' | relative_url}}>
                         <h1 class="Header__title">{{site.title}}</h1>
