Fix CSS issues.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -217,6 +217,7 @@ h3 {
     left: 0;
     position: absolute;
     right: 0;
+    text-align: center;
     top: 0;
 
     transition: opacity 1s ease-in-out;
