Everybody is a random emoji

--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -22,6 +22,13 @@
     <a-scene inspector-plugin-recast background="color: #123456">
       <a-assets>
         <img id="skyTexture" src={{'/assets/bg.jpg' | relative_url}} />
+        <a-asset-item id="emoji_0" src="/assets/models/emoji_0.glb"></a-asset-item>
+        <a-asset-item id="emoji_1" src="/assets/models/emoji_1.glb"></a-asset-item>
+        <a-asset-item id="emoji_2" src="/assets/models/emoji_2.glb"></a-asset-item>
+        <a-asset-item id="emoji_3" src="/assets/models/emoji_3.glb"></a-asset-item>
+        <a-asset-item id="emoji_4" src="/assets/models/emoji_4.glb"></a-asset-item>
+        <a-asset-item id="emoji_5" src="/assets/models/emoji_5.glb"></a-asset-item>
+        <a-asset-item id="emoji_6" src="/assets/models/emoji_6.glb"></a-asset-item>
       </a-assets>
       <a-sky src="#skyTexture"></a-sky>
        <a-entity id="rig"
@@ -60,7 +67,7 @@
         --> CONTROLS: WASD to move, mouse to look <--
         </h2>
         <h2 class="Exhibit__controls" id="plithy-msg" style="visibility: hidden;">
-            OH GOD WHY DID I SPEND SO msgTIME ON THIS
+            OH GOD WHY DID I SPEND SO MUCH TIME ON THIS
         </h2>
         <button class="Exhibit__link" id="enter">LOADING</button>
       </div>
