Pick your own emoji

--- a/_includes/plithies.html
+++ b/_includes/plithies.html
@@ -26,4 +26,6 @@
     let msg_el = document.getElementById('plithy-msg');
     msg_el.textContent = msg+'!';
     msg_el.style.visibility = 'inherit';
+    console.log("%cGreetings traveler, are you a student interested in maintaining <https://olin.build>?\nTalk to Evan New-Schmidt (github/newsch, eschmidt@students/alumni...).",
+    "color: red; font-size: 1.5em; font-weight: bold;");
 </script>
