Make lighting more moody

--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -12,14 +12,15 @@
     {% assign COPRESENCE_URL = "https://stormy-retreat-22009.herokuapp.com" %}
     <script src="{{COPRESENCE_URL}}/socket.io/socket.io.js"></script>
     <script>
-        var socket = io('{{COPRESENCE_URL}}');
+      var socket = io('{{COPRESENCE_URL}}');
     </script>
     <script src="{{COPRESENCE_URL}}/client.js"></script>
+    <!-- Love, Matt & Evan -->
   </head>
   <body>
     {% assign sound_url = '/assets/background.mp3' | relative_url %}
     <audio src={{sound_url}} loop preload="auto"></audio>
-    <a-scene inspector-plugin-recast background="color: #123456">
+    <a-scene inspector-plugin-recast background="color: #FBB">
       <a-assets>
         <img id="skyTexture" src={{'/assets/bg.jpg' | relative_url}} />
         <a-asset-item id="emoji_0" src="/assets/models/emoji_0.glb"></a-asset-item>
@@ -30,7 +31,9 @@
         <a-asset-item id="emoji_5" src="/assets/models/emoji_5.glb"></a-asset-item>
         <a-asset-item id="emoji_6" src="/assets/models/emoji_6.glb"></a-asset-item>
       </a-assets>
-      <a-sky src="#skyTexture"></a-sky>
+      <!-- <a-sky src="#skyTexture"></a-sky> -->
+      <a-entity light="color: #FBB; type: ambient"></a-entity>
+      <a-entity light="color: #FCB; intensity: 0.6; castShadow: true; type: point;" position="11.28605 4.5939 -12.52874"></a-entity>
        <a-entity id="rig"
                 movement-controls="constrainToNavMesh: true"
                 speed="0.3"
